FRONT-0001: create certificate_preview template and url

--- a/templates/profiles/profile_certificates.html
+++ b/templates/profiles/profile_certificates.html
@@ -67,10 +67,10 @@
 
                                 <p class="text-justify mb-lg-2">{{ c.event.description|truncatewords:100|safe }}</p>
 
-                                <div class="">
-                                    <a href="" class="btn btn-sm btn-white text-uppercase mb-1 mr-2 btn-hover-info">
+                                <div class="profile_certificates-button-wrapper">
+                                    <button class="btn btn-sm btn-white text-uppercase mb-1 mr-2 btn-hover-info">
                                         <i class="fa fa-certificate mr-2" aria-hidden="true"></i>Ver Certificado
-                                    </a>
+                                    </button>
                                 </div>
                             </div>
                         </div>
