--- a/client/src/certificate_preview/index.sass
+++ b/client/src/certificate_preview/index.sass
@@ -1,3 +1,11 @@
+.a4
+  width: 210mm
+  height: 297mm
+
+.a4-landscape
+  width: 297mm
+  height: 210mm
+
 .certificate
   &__border
     background: #0f0c29
@@ -9,8 +17,6 @@
     justify-content: center
     padding: 12px
     box-sizing: border-box
-    width: 800px
-    height: 500px
 
   &__container
     background: #FFF
@@ -24,23 +30,29 @@
     align-items: center
     justify-content: center
     font-family: Monserrat
-    font-size: 14px
-    line-height: 30px
+    font-size: 21px
+    line-height: 45px
     cursor: default
 
   &__logo-container
-    width: 60px
-    height: 60px
+    width: 120px
+    height: 120px
     img
       width: 100%
       height: auto
 
   &__graduate
-    font-size: 21px
+    font-size: 30px
     font-weight: bold
-    margin: 15px auto
+    margin: 45px auto
 
   &__title
-    font-size: 18px
+    font-size: 30px
     font-weight: bold
-    margin: 9px auto
+    margin: 45px auto
+
+  &__author-address,
+  &__date,
+  &__tx-id
+    font-size: 15px
+    line-height: 18px
