--- a/templates/profiles/profile_bookmarks.html
+++ b/templates/profiles/profile_bookmarks.html
@@ -86,8 +86,7 @@
                                 </li>
                             {% elif b.1.accepted == True %}  {# Ya obtuvo un certificado #}
                                 <li class="mr-3">
-                                    <button type="button" data-id="{{ b.0.event.id }}" class="btn btn-info view_certificate">
-                                        <i class="fa fa-certificate"></i> Ver Certificado</button>
+                                    <i class="fa fa-smile-o" ></i> Tienes un <a href="{% url 'profile_certificates' %}">certificado</a> de este evento.
                                 </li>
                             {% elif b.1.accepted == None %} {# Todavia no decide el profesor #}
                                 <li class="mr-3">
