--- a/templates/profiles/profile_certificates.html
+++ b/templates/profiles/profile_certificates.html
@@ -68,7 +68,8 @@
                                 <p class="text-justify mb-lg-2">{{ c.event.description|truncatewords:100|safe }}</p>
 
                                 <div class="profile_certificates-button-wrapper">
-                                    <button class="btn btn-sm btn-white text-uppercase mb-1 mr-2 btn-hover-info">
+                                    <button class="open_certificate btn btn-sm btn-white text-uppercase mb-1 mr-2 btn-hover-info"
+                                        onclick="location.href = '{% url 'certificate_preview' c.id %}' ">
                                         <i class="fa fa-certificate mr-2" aria-hidden="true"></i>Ver Certificado
                                     </button>
                                 </div>
@@ -76,7 +77,6 @@
                         </div>
 
                     {% endfor %}
-
                 </div>
             </div>
         </div>
