--- a/templates/profiles/email_confirm_account.html
+++ b/templates/profiles/email_confirm_account.html
@@ -1,5 +1,6 @@
 
 {% autoescape off %}
-Hola {{ user.username }},
-Por favor confirma tu cuenta de Academia Blockchain dando click en el siguiente link: http://{{ domain }}{% url 'activate' uidb64=uid token=token %}
+Hola {{ username }},
+Por favor confirma tu cuenta de Academia Blockchain dando click en el siguiente link:
+    http://{{ domain }}{% url 'activate_account' uid=uid token=token %}
 {% endautoescape %}
