--- a/templates/profiles/password_reset_confirm.html
+++ b/templates/profiles/password_reset_confirm.html
@@ -1,10 +1,43 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-</body>
-</html>
+{% block content %}
+    <section class="py-8 py-md-10">
+      <div class="container">
+      <div class="row">
+      <div class="col-sm-6 offset-lg-2 col-lg-4">
+        <div class="mb-4 mb-sm-0">
+          <div class="bg-warning rounded-top p-2">
+            <h3 class="text-white font-weight-bold mb-0 ml-2">Reestablecer Contraseña</h3>
+          </div>
+          <div class="border rounded-bottom-sm border-top-0">
+            <div class="p-3">
+                {% if validlink %}
+
+                <p>Por favor, escribe tu nueva contraseña dos veces.</p>
+
+                <form method="post">{% csrf_token %}
+                    <fieldset class="module aligned">
+                        <div class="form-row field-password1">
+                            {{ form.new_password1.errors }}
+                            <label for="id_new_password1">Nueva Contraseña</label>
+                            {{ form.new_password1 }}
+                        </div>
+                        <div class="form-row field-password2">
+                            {{ form.new_password2.errors }}
+                            <label for="id_new_password2">Repite la Contraseña</label>
+                            {{ form.new_password2 }}
+                        </div>
+                        <input type="submit" value="Guardar nueva contraseña">
+                    </fieldset>
+                </form>
+                {% else %}
+                    <p>El link de reseteo de contraseña no es válido.</p>
+              {% endif %}
+            </div>
+          </div>
+        </div>
+      </div>
+      </div> <!--row-->
+      </div> <!--container-->
+    </section>
+{% endblock %}
