--- a/templates/profiles/password_reset_done.html
+++ b/templates/profiles/password_reset_done.html
@@ -1,10 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-</body>
-</html>
+{% block content %}
+    <section class="py-8 py-md-10">
+      <div class="container">
+      <div class="row">
+      <div class="col-sm-6 offset-lg-2 col-lg-4">
+        <div class="mb-4 mb-sm-0">
+          <div class="bg-warning rounded-top p-2">
+            <h3 class="text-white font-weight-bold mb-0 ml-2">Correo enviado!</h3>
+          </div>
+          <div class="border rounded-bottom-sm border-top-0">
+            <div class="p-3">
+                <p class="mb-0"> <i class="fa fa-inbox"></i>
+                  Esto puede tardar unos minutos. Revisa tu bandeja de entrada.
+                </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      </div> <!--row-->
+      </div> <!--container-->
+    </section>
+{% endblock %}
