--- a/templates/courses/certificate_preview.html
+++ b/templates/courses/certificate_preview.html
@@ -1,67 +1,47 @@
 {% load static %}
 
+<!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="author" content="Academia Blockchain">
-    <meta name="description" content="Vista previa del certificado">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link href="{% static 'assets/img/favicon.png' %}" rel="shortcut icon">
-    <link href="{% static 'assets/plugins/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="{% static 'assets/build/certificate_preview.bundle.css' %}"
-      media="screen"
-    />
-    <title>Certificado</title>
-  </head>
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Web site created using create-react-app" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <!--
+      manifest.json provides metadata used when your web app is installed on a
+      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
+    -->
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <!--
+      Notice the use of %PUBLIC_URL% in the tags above.
+      It will be replaced with the URL of the `public` folder during the build.
+      Only files inside the `public` folder can be referenced from the HTML.
 
-  <body class="d-flex align-items-center justify-content-center flex-column">
-    <div id="certificate__wrapper" aria-label="Vista previa del certificado">
-      <div class="certificate__border a4-landscape">
-        <div class="certificate__container">
-          <div class="certificate__logo-container">
-            <img
-                alt="ACBC Logo"
-                src="{% static 'assets/img/academa_blockchain_logo.png' %}"
-            />
-          </div>
-          <div class="certificate__acbc-title">Certificación de Academia Blockchain</div>
-          <div class="certificate__graduate">Esteban el Estudiante</div>
-          <div class="certificate__pre-title">ha completado exitosamente la certificación en</div>
-          <div class="certificate__title">Curso de Cosas</div>
-          <div class="certificate__author">Autor: Profesor Juan Pérez</div>
-          <div class="certificate__description">
-            Descripción: este curso consiste en aprender cosas
-          </div>
-          <div class="certificate__author-address">
-            Dirección del autor: 0x2c4b314b8de36728aba2bd2e8e1809162b763403
-          </div>
-          <div class="certificate__date">Fecha: Jan-05-2021 07:44:21 PM + UTC</div>
-          <div class="certificate__tx-id">
-            TX id: 0xbed43af4d271362da3b85a370f9226fcde9e78c2c98e2bfd74d6774c2261a3fa
-          </div>
-        </div>
-      </div>
-    </div>
+      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
+      work correctly both with client-side routing and a non-root public URL.
+      Learn how to configure a non-root public URL by running `npm run build`.
+    -->
+  <title>Certificado</title>
+</head>
 
-    <div class="m-3">
-      <a
-        href="https://etherscan.io/tx/0xbed43af4d271362da3b85a370f9226fcde9e78c2c98e2bfd74d6774c2261a3fa"
-        target="_blank"
-      >
-        Ver transacción en la blockchain
-      </a>
-    </div>
-    <div class="m-2">
-        <button id="button-print-certificate" type="button" class="btn btn-primary">
-        DESCARGAR
-      </button>
-    </div>
-    <div id="error-message" class="fs-6 text-danger"></div>
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="certificate_preview"></div>
+  <!--
+      This HTML file is a template.
+      If you open it directly in the browser, you will see an empty page.
 
-    <script type="text/javascript" src="{% static 'assets/build/certificate_preview.bundle.js' %}"></script>
-  </body>
+      You can add webfonts, meta tags, or analytics to this file.
+      The build step will place the bundled scripts into the <body> tag.
+
+      To begin the development, run `npm start` or `yarn start`.
+      To create a production bundle, use `npm run build` or `yarn build`.
+    -->
+
+  <script type="text/javascript" src="{% static 'assets/build/certificate_preview.bundle.js' %}"></script>
+</body>
+
 </html>
