--- a/templates/courses/event_detail.html
+++ b/templates/courses/event_detail.html
@@ -100,11 +100,9 @@
 
 						<h3 class="card-title text-warning">Contacta a <a href="{% url 'user_profile' event.owner.id %}">{{ event.owner.username }}:</a></h3>
 
-                    {% ratings event %}
-
                     {% if user.is_authenticated %}
                         <div class="list-group">
-                        {% if user.is_authenticated %}
+                        {% if contact_methods %}
                             {% for contact_method in contact_methods %}
                                 {% if contact_method.has_contact_url %}
                                     <a class="list-group-item list-group-item-action list-group-item-light"
@@ -119,6 +117,8 @@
                                     </p>
                                 {% endif %}
                             {% endfor %}
+                        {% else %}
+                            <p>{{ event.owner.username }} no ha establecido métodos de contacto. </p>
                         {% endif %}
                         </div>
                     {% else %}
@@ -128,6 +128,10 @@
                             </li>
                         </ul>
                     {% endif %}
+                    </div>
+
+                    <div class="text-right">
+                        {% ratings event %}
                     </div>
 
                 <div class="card shadow-none bg-transparent">
