#31 Calificar solo con certificado

--- a/templates/courses/event_detail.html
+++ b/templates/courses/event_detail.html
@@ -131,7 +131,7 @@
                     </div>
 
                     <div class="text-right">
-                        {% ratings event %}
+                        {% ratings event read_only=lack_certificate %}
                     </div>
 
                 <div class="card shadow-none bg-transparent">
