--- a/templates/profiles/password_reset_email.html
+++ b/templates/profiles/password_reset_email.html
@@ -1,31 +1,14 @@
-{% extends 'base.html' %}
+{% load i18n %}{% autoescape off %}
+{% blocktrans %}You're receiving this email because you requested a password reset for your user account at {{ site_name }}.{% endblocktrans %}
 
-{% block content %}
-    <section class="py-8 py-md-10">
-      <div class="container">
-      <div class="row">
-      <div class="col-sm-6 offset-lg-2 col-lg-4">
-        <div class="mb-4 mb-sm-0">
-          <div class="bg-warning rounded-top p-2">
-            <h3 class="text-white font-weight-bold mb-0 ml-2">Olvidaste tu Contrasena?</h3>
-          </div>
-          <div class="border rounded-bottom-sm border-top-0">
-            <div class="p-3">
-                <form method="POST">
-                    {% csrf_token %}
-                    {{ form.as_p }}
-                    <input type="submit" value="Enviar Correo">
-                </form>
-            </div>
-            <div class="form-group text-center text-secondary mb-0">
-              <p class="mb-0"> <i class="fa fa-mail-forward"></i>
-                  Escribe tu correo electrónico, te enviaremos instrucciones para resetear tu contraseña.
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-      </div> <!--row-->
-      </div> <!--container-->
-    </section>
+{% trans "Please go to the following page and choose a new password:" %}
+{% block reset_link %}
+{{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
 {% endblock %}
+{% trans 'Your username, in case you’ve forgotten:' %} {{ user.get_username }}
+
+{% trans "Thanks for using our site!" %}
+
+{% blocktrans %}The {{ site_name }} team{% endblocktrans %}
+
+{% endautoescape %}
