--- a/templates/profiles/password_reset_confirm.html
+++ b/templates/profiles/password_reset_confirm.html
@@ -27,7 +27,7 @@
                             <label for="id_new_password2">Repite la Contraseña</label>
                             {{ form.new_password2 }}
                         </div>
-                        <input type="submit" value="Guardar nueva contraseña">
+                        <input class="btn btn-success text-uppercase w-100" type="submit" value="Guardar nueva contraseña">
                     </fieldset>
                 </form>
                 {% else %}
