# 15 password reset form

--- a/templates/profiles/password_reset_confirm.html
+++ b/templates/profiles/password_reset_confirm.html
@@ -27,7 +27,9 @@
                             <label for="id_new_password2">Repite la Contraseña</label>
                             {{ form.new_password2 }}
                         </div>
-                        <input class="btn btn-success text-uppercase w-100" type="submit" value="Guardar nueva contraseña">
+                        <div class="form-group">
+                            <input class="btn btn-success text-uppercase w-100" type="submit" value="Guardar nueva contraseña">
+                        </div>
                     </fieldset>
                 </form>
                 {% else %}
