--- a/templates/courses/event_create.html
+++ b/templates/courses/event_create.html
@@ -93,7 +93,7 @@
                        class="form-control"
                        id="record_date" name="record_date"/>
                 <small class="form-text text-muted">
-                  Aproximadamente, ¿cuándo publicaste la grabación?
+                  Aproximadamente, ¿cuándo terminaste la grabación?
                 </small>
             </div>
 
