FRONT-0006: update certificate data shape in client

--- a/client/src/certificate_preview/components/CertificatePreview/index.sass
+++ b/client/src/certificate_preview/components/CertificatePreview/index.sass
@@ -44,7 +44,7 @@ $layout-breakpoint-medium: 1020px
       width: 100%
       height: auto
 
-  &__graduate,
+  &__username,
   &__author,
   &__title
     font-size: 21px
@@ -68,14 +68,14 @@ $layout-breakpoint-medium: 1020px
       width: 120px
       height: 120px
 
-    &__graduate,
+    &__username,
     &__author,
     &__title
       font-size: 30px
       margin: 24px auto
 
     &__author
-      font-size: 21px
+      font-size: 18px
 
     &__footer
       font-size: 15px
