--- a/templates/courses/event_create.html
+++ b/templates/courses/event_create.html
@@ -1,8 +1,9 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block extra_head %}
-  <script src='https://cdn.tiny.cloud/1/yedm03jmmtjrfydjtb1xhl94q6b8w29cudjs7xo4bsboo0qy/tinymce/5/tinymce.min.js' referrerpolicy="origin">
-  </script>
+  <link href="{% static 'assets/css/tag-basic-style.css' %}" id="option_style" rel="stylesheet">
+  <script src='https://cdn.tiny.cloud/1/yedm03jmmtjrfydjtb1xhl94q6b8w29cudjs7xo4bsboo0qy/tinymce/5/tinymce.min.js' referrerpolicy="origin"></script>
 {% endblock extra_head %}
 
 {% block content %}
@@ -130,6 +131,17 @@
                 </small>
             </div>
 
+            <div class="form-group">
+                <label for="title">
+                    Tags
+                </label>
+{#                <input type="text" id="tags" class="form-control" name="schedule_description"/>#}
+                <div data-tags-input-name="tags" id="tagBox"></div>
+                <small id="" class="form-text text-muted">
+                    Tags separados por comas.
+                </small>
+            </div>
+
             <div class="input-group">
               <label for="id_profile_picture">Imagen del Evento: </label>
                 <input type="file" name="event_picture" accept="image/*" id="id_event_picture">
@@ -169,6 +181,7 @@
 
 {% block extra_js %}
 <script src="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js"></script>
+<script src='{% static 'assets/js/tagging.min.js' %}'></script>
 
     <script>
         $( document ).ready(function() {
@@ -222,6 +235,9 @@
                 $("#event_recurrent").hide();
                 $('#input_record_date').hide();
             });
+
+            var t = $( "#tagBox" ).tagging();
+            t[0].addClass( "form-control" );
         });
     </script>
 {% endblock %}
