--- a/templates/profiles/profile_edit_cryptos.html
+++ b/templates/profiles/profile_edit_cryptos.html
@@ -40,7 +40,7 @@
                             <input type="text" class="form-control" id="crypto_code_{{ forloop.counter }}" value="{{ c.crypto.code }}" placeholder="Código">
                           </div>
                           <input type="text" class="form-control" id="crypto_address_{{ forloop.counter }}"
-                                    placeholder="Dirección de tu billetera (copia y pégala aquí)" value="{{ c.address }}">
+                                    placeholder="Opcional. Dirección de tu billetera (copia y pégala aquí)" value="{{ c.address }}">
                             <hr>
                         </div>
                     {% endfor %}
