#51 cambios look n feel parciales

--- a/templates/courses/events.html
+++ b/templates/courses/events.html
@@ -1,15 +1,17 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %}
 
 <!-- ====================================
 ———	BREADCRUMB
 ===================================== -->
-  <section class="breadcrumb-bg" style="background-image: url('https://www.processmaker.com/wp-content/uploads/2020/01/blockchain-technology-digital-code-chain_99236-110.jpg');">
+  <section class="breadcrumb-bg" style="background-image: url('{% static 'assets/img/parallax_academia2.jpeg' %}');">
     <div class="container">
       <div class="breadcrumb-holder">
         <div>
-          <h1 class="breadcrumb-title"> Utiliza criptomonedas para aprender y gana compartiendo conocimiento. </h1>
+          <h1 class="breadcrumb-title"> Utiliza criptomonedas para aprender y gana compartiendo conocimiento.
+              <br> ACADEMIA BLOCKCHAIN es el futuro de la educación libre. </h1>
         </div>
       </div>
     </div>
