--- a/templates/base.html
+++ b/templates/base.html
@@ -87,8 +87,8 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-md navbar-scrollUp navbar-sticky navbar-white">
       <div class="container">
-        <a class="navbar-brand" href="{% url 'event_index' %}">
-          <img class="d-inline-block" src="{% static 'assets/img/academa_blockchain_logo.png' %}" alt="Academia Blockchain">
+        <a class="navbar-brand text-muted" href="{% url 'event_index' %}">
+          <img class="d-inline-block" src="{% static 'assets/img/logo_solo.png' %}" alt="logo"> ACADEMIA BLOCKCHAIN
         </a>
 
         <button class="navbar-toggler py-2" type="button" data-toggle="collapse" data-target="#navbarContent"
