--- a/templates/courses/event_detail.html
+++ b/templates/courses/event_detail.html
@@ -93,15 +93,12 @@
                             <button id="event_edit" type="button" class="btn btn-primary"><i class="fa fa-edit"></i> Editar</button>
                         </div>
                     {% else %}
-                        {% if event_is_bookmarked %}
-                            <div class="text-right">
-                                <button id="remove_bookmark" type="button" class="btn btn-warning"><i class="fa fa-star-o"></i> Ya no me interesa</button>
-                            </div>
-                        {% else %}
-                            <div class="text-right">
-                                <button id="event_bookmark" type="button" class="btn btn-info"><i class="fa fa-star"></i> Me Interesa - Guardar</button>
-                            </div>
-                        {% endif %}
+                    <div id="remove_bookmark_div" class="text-right">
+                        <button id="remove_bookmark" type="button" class="btn btn-warning"><i class="fa fa-star-o"></i> Ya no me interesa</button>
+                    </div>
+                    <div id="event_bookmark_div" class="text-right">
+                        <button id="event_bookmark" type="button" class="btn btn-info"><i class="fa fa-star"></i> Me Interesa - Guardar</button>
+                    </div>
                     {% endif %}
 						<h3 class="card-title text-dark">{{ event.title }}</h3>
 						<p class="">{{ event.description|safe }}</p>
@@ -288,10 +285,21 @@
     <script type="text/javascript" src="{% static 'star-ratings/js/dist/star-ratings.min.js' %}"></script>
     <script>
         $( document ).ready(function() {
+
+            console.log("{{ event_is_bookmarked }}");
+            if ("{{ event_is_bookmarked }}" === "True"){
+                console.log("IS BOOKMARKED");
+                $("#event_bookmark_div").hide();
+            } else {
+                console.log("IS NOT");
+                $("#remove_bookmark_div").hide();
+            }
+
             $("#event_edit").on("click", function(e){
                 e.preventDefault();
                 window.location.href = "{% url 'event_edit' event.id %}";
             });
+
             $("#event_bookmark").on("click", function(e){
                 e.preventDefault();
                 if ("{{ user.is_authenticated }}" === "True"){
@@ -303,7 +311,9 @@
                         url: "{% url 'event_bookmark' event.id %}",
                         data: data,
                         success: function(response){
-                            location.reload();
+                            console.log("BOOKMARKED!");
+                            $("#event_bookmark_div").hide();
+                            $("#remove_bookmark_div").show();
                         },
                         error: function(response){
                             console.log(response);
@@ -322,7 +332,9 @@
                         url: "{% url 'remove_bookmark' event.id %}",
                         data: data,
                         success: function(response){
-                            location.reload();
+                            console.log("removed!");
+                            $("#remove_bookmark_div").hide();
+                            $("#event_bookmark_div").show();
                         },
                         error: function(response){
                             console.log(response);
