--- a/templates/base.html
+++ b/templates/base.html
@@ -115,7 +115,7 @@
 
             <li class="nav-item dropdown bg-success">
                 {% if user.is_authenticated %}
-                 <a class="nav-link dropdown-toggle {{ profile_index_active }}" href="{% url 'profile_certificates' %}">
+                 <a title="{{ user.username }}" class="nav-link dropdown-toggle {{ profile_index_active }}" href="{% url 'profile_certificates' %}">
                     <i class="fa fa-user nav-icon" aria-hidden="true"></i>
                     <span>{{ user.username }}</span>
                  </a>
