--- a/templates/base.html
+++ b/templates/base.html
@@ -88,7 +88,7 @@
     <nav class="navbar navbar-expand-md navbar-scrollUp navbar-sticky navbar-white">
       <div class="container">
         <a class="navbar-brand text-muted" href="{% url 'event_index' %}">
-          <img class="d-inline-block" src="{% static 'assets/img/logo_solo.png' %}" alt="logo"> ACADEMIA BLOCKCHAIN
+          <img class="d-inline-block" src="{% static 'assets/img/logo_solo.png' %}" alt="logo"> <strong>ACADEMIA BLOCKCHAIN</strong>
         </a>
 
         <button class="navbar-toggler py-2" type="button" data-toggle="collapse" data-target="#navbarContent"
