--- a/templates/profiles/profile_base.html
+++ b/templates/profiles/profile_base.html
@@ -17,10 +17,10 @@
             <div class="card-body border border-top-0 rounded-bottom">
                 <ul class="list-unstyled mb-0">
                     <li class="mb-2">
-                        <a class="text-muted font-weight-medium d-block border rounded py-2 pl-3 {{ underline_data }}" href="{% url 'profile_data' %}">Datos de Perfil</a>
+                        <a class="text-muted font-weight-medium d-block border rounded py-2 pl-3 {{ underline_data }}" href="{% url 'profile_certificates' %}">Certificados</a>
                     </li>
-                    <li class="mt-2">
-                        <a class="text-muted font-weight-medium d-block border rounded py-2 pl-3 {{ underline_certificates }}" href="{% url 'profile_certificates' %}">Certificados</a>
+                     <li class="mb-2">
+                        <a class="text-muted font-weight-medium d-block border rounded py-2 pl-3 {{ underline_data }}" href="{% url 'profile_data' %}">Datos de Perfil</a>
                     </li>
                     <li class="my-2">
                         <a class="text-muted font-weight-medium d-block border rounded py-2 pl-3 {{ underline_events }}" href="{% url 'profile_events' %}">Cursos y Eventos</a>
