--- a/templates/profiles/profile_base.html
+++ b/templates/profiles/profile_base.html
@@ -17,7 +17,7 @@
             <div class="card-body border border-top-0 rounded-bottom">
                 <ul class="list-unstyled mb-0">
                     <li class="mb-2">
-                        <a class="text-muted font-weight-medium d-block border rounded py-2 pl-3 {{ underline_data }}" href="{% url 'profile_certificates' %}">Certificados</a>
+                        <a class="text-muted font-weight-medium d-block border rounded py-2 pl-3 {{ underline_certificates }}" href="{% url 'profile_certificates' %}">Certificados</a>
                     </li>
                      <li class="mb-2">
                         <a class="text-muted font-weight-medium d-block border rounded py-2 pl-3 {{ underline_data }}" href="{% url 'profile_data' %}">Datos de Perfil</a>
