--- a/templates/courses/events.html
+++ b/templates/courses/events.html
@@ -6,12 +6,12 @@
 <!-- ====================================
 ———	BREADCRUMB
 ===================================== -->
-  <section class="breadcrumb-bg" style="background-image: url('{% static 'assets/img/parallax_academia2.jpeg' %}');">
+  <section class="breadcrumb-bg" style="background-image: url('{% static 'assets/img/parallax_a.png' %}');">
     <div class="container">
       <div class="breadcrumb-holder">
         <div>
           <h1 class="breadcrumb-title"> Utiliza criptomonedas para aprender y gana compartiendo conocimiento.
-              <br> ACADEMIA BLOCKCHAIN es el futuro de la educación libre. </h1>
+              <br> ACADEMIA BLOCKCHAIN es el futuro <br> de la educación libre. </h1>
         </div>
       </div>
     </div>
