--- a/templates/courses/events.html
+++ b/templates/courses/events.html
@@ -6,7 +6,7 @@
 <!-- ====================================
 ———	BREADCRUMB
 ===================================== -->
-  <section class="breadcrumb-bg" style="background-image: url('{% static 'assets/img/parallax_a.png' %}');">
+  <section class="breadcrumb-bg" style="background-image: url('{% static 'assets/img/parallax_c.png' %}');">
     <div class="container">
       <div class="breadcrumb-holder">
         <div>
@@ -20,7 +20,6 @@
 <!-- ====================================
 ———	SEARCH RESULT
 ===================================== -->
-
 
 <section class="pt-7 pb-7 pt-md-10">
 	<div class="container">
