--- a/templates/courses/send_cert_blockchain.html
+++ b/templates/courses/send_cert_blockchain.html
@@ -37,8 +37,10 @@
         </p>
 
         <p class="text-muted mb-5">En la cadena de bloques se guarda un hash que es una representación única e inmutable de tu certificado.
-            <a href="">leer más</a> <br> El siguiente es el texto del certificado que quedará guardado permanentemente a través del hash:
+            Lo adecuado es guardar la información escencial en el hash. <a href="">leer más</a> <br>
+            El siguiente es el texto del certificado que quedará guardado permanentemente a través del hash:
         </p>
+          
 
           <form action="">
               <div class="form-group" >
