--- a/templates/courses/send_cert_blockchain.html
+++ b/templates/courses/send_cert_blockchain.html
@@ -31,7 +31,7 @@
       </div>
 
       <div class="col-sm-8 col-xs-12">
-        <h2 class="text-warning font-weight-bold text-capitalize pl-0 mb-5">Activat Metamask</h2>
+        <h2 class="text-warning font-weight-bold text-capitalize pl-0 mb-5">Activar Metamask</h2>
 
         <p class="text-muted mb-5">Para interactuar con la blockchain de Ethereum necesitas Metamask, un plugin para tu navegador.
             <a href="">leer más</a>
@@ -78,35 +78,59 @@
     <script>
     $( document ).ready(function() {
        $("#send_transaction").hide();
-       const infura_url = "https://ropsten.infura.io/v3/db26d321185243db9d29d384b55dba3c";
-       const web3 = new Web3(infura_url);
-       console.log(web3);
-       const address = "0x0Fa50B058e9CCAb5AfD2337F0dF997801715a66e";
-       web3.eth.getBalance(address, (err, wei) => {
-            balance = web3.utils.fromWei(wei, 'ether');
-            console.log(balance);
-       });
+       {#const infura_url = "https://ropsten.infura.io/v3/db26d321185243db9d29d384b55dba3c";#}
+       {#const web3 = new Web3(Web3.givenProvider);#}
+       {#console.log(web3);#}
+       {#const address = "0x0Fa50B058e9CCAb5AfD2337F0dF997801715a66e";#}
+       {#web3.eth.getBalance(address, (err, wei) => {#}
+       {#     balance = web3.utils.fromWei(wei, 'ether');#}
+       {#     console.log(balance);#}
 
-       accounts = []
+       if (typeof window.ethereum !== 'undefined') {
+         console.log('MetaMask is installed!');
+        }
+
        async function getAccount() {
-          accounts = await ethereum.request({ method: 'eth_requestAccounts' });
-          console.log(accounts);
+          const accounts = await ethereum.request({ method: 'eth_requestAccounts' });
+          const account = accounts[0];
        }
+
        $("#connect_ethereum").on("click", function(e){
            e.preventDefault();
-           getAccount();
+           const accounts = getAccount().then((accounts) => {
+               console.log(accounts);
+           }).catch((error) => {
+
+           });
+           const active_acccount = accounts[0]
+           console.log(accounts);
+           console.log(active_acccount);
+           console.log(ethereum.chainId)
+           console.log(ethereum.chainId.networkId);
            $("#send_transaction").show();
            $(this).hide();
        });
 
-       $("#send_transaction").on("click", function(e){
+       $("#send_transactions").on("click", function(e){
            e.preventDefault();
-           console.log(accounts[0]);
-           let ropsten_response = web3.eth.sendTransaction(
-               {
-                 from: ''
-               }
-           )
+           let params = [
+                  {
+                    from: '0xb60e8dd61c5d32be8058bb8eb970870f07233155',
+                    to: '0xd46e8dd67c5d32be8058bb8eb970870f07244567',
+                    gas: '0x76c0', // 30400
+                    gasPrice: '0x9184e72a000', // 10000000000000
+                    value: '0x9184e72a', // 2441406250
+                    data: '0xd46e8dd67c5d32be8d46e8dd67c5d32be8058bb8eb970870f072445675058bb8eb970870f072445675'
+                  },
+                ];
+           ethereum.request({
+               method: "eth_send_transaction",
+               params
+           }).then((result) => {
+               console.log(result);
+           }).catch((error) => {
+               console.log(error);
+           });
        });
 
     });
